<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/post_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/post_body_text"
        android:layout_marginTop="@dimen/post_body_margin"
        android:textStyle="bold"
        android:maxLength="35"
        android:visibility="gone"
        android:layout_below="@+id/post_title"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/post_title"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textStyle="bold"
        android:maxLength="35"
        tools:text="@string/my_post_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/post_title_margin_top" />

</RelativeLayout>