...
        android:paddingLeft="@dimen/recyclerview_padding"
        android:paddingRight="@dimen/recyclerview_padding"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_posts_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_post"
            android:layout_alignParentTop="true"
...
